main weblogo added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://ih1.redbubble.net/image.2950444449.6282/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.webp" />
+    <link rel="icon" type="jpg" href="https://ih1.redbubble.net/image.2950444449.6282/st,small,507x507-pad,600x600,f8f8f8.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,3 +12,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
